compatible marshal loader

* ext/date/date_core.c (d_lite_old_load): for compatibilities with
  1.8.  [ruby-core:45891] [Bug #6652]