test/date/test_date_marshal.rb
@@ -38,4 +38,15 @@ class TestDateMarshal < Test::Unit::TestCase
     assert_raise(RuntimeError){d.marshal_load(a)}
   end
 
+  def test_marshal_old
+    bug6652 = '[ruby-core:45891]'
+
+    data = "\004\bu:\tDate=\004\b[\bo:\rRational\a:\017@numeratori\003%\275J:\021" \
+           "@denominatori\ai\000i\003\031\025#"
+    assert_equal(Date.new(1993, 2, 24), Marshal.load(data), bug6652)
+
+    data = "\004\bu:\rDateTimeC\004\b[\bo:\rRational\a:\017@numeratorl+\bK\355B\024\003\000:\021" \
+           "@denominatori\002\030\025i\000i\003\031\025#"
+    assert_equal(DateTime.new(1993, 2, 24, 12, 34, 56), Marshal.load(data), bug6652)
+  end
 end
